--- a/packages/starbook/layout/PageFrame.astro
+++ b/packages/starbook/layout/PageFrame.astro
@@ -1,5 +1,5 @@
 ---
-import MobileMenuToggle from './MobileMenuToggle.astro';
+import MobileMenuToggle from '../components/MobileMenuToggle.astro';
 ---
 
 <div class="page">
@@ -12,14 +12,7 @@ import MobileMenuToggle from './MobileMenuToggle.astro';
       </div>
     </div>
   </nav>
-  <div class="main-frame">
-    <div class="container">
-      <aside class="right-sidebar-container">
-        <div class="right-sidebar"><slot name="right-sidebar" /></div>
-      </aside>
-      <div class="main-pane"><slot /></div>
-    </div>
-  </div>
+  <div class="main-frame"><slot /></div>
 </div>
 
 <style>
@@ -84,30 +77,6 @@ import MobileMenuToggle from './MobileMenuToggle.astro';
   }
 
   @media (min-width: 72rem) {
-    .container {
-      display: flex;
-    }
-
-    .right-sidebar-container {
-      order: 2;
-      position: relative;
-      width: calc(
-        var(--sb-sidebar-width) +
-          (100% - var(--sb-content-width) - var(--sb-sidebar-width)) / 2
-      );
-    }
-
-    .right-sidebar {
-      position: fixed;
-      top: 0;
-      border-inline-start: 1px solid var(--sb-color-gray-6);
-      padding-top: var(--sb-nav-height);
-      width: 100%;
-      height: 100vh;
-      overflow-y: auto;
-      scrollbar-width: none;
-    }
-
     .main-pane {
       order: 1;
       width: calc(
