--- a/packages/starbook/components/TableOfContents/TableOfContentsList.astro
+++ b/packages/starbook/components/TableOfContents/TableOfContentsList.astro
@@ -1,5 +1,5 @@
 ---
-import type { generateToC } from './TableOfContents/generateToC';
+import type { generateToC } from './generateToC';
 
 interface Props {
   toc: ReturnType<typeof generateToC>;
