--- a/packages/starbook/layout/PageFrame.astro
+++ b/packages/starbook/layout/PageFrame.astro
@@ -1,17 +1,23 @@
 ---
 import MobileMenuToggle from '../components/MobileMenuToggle.astro';
+
+const hasSidebar = Astro.slots.has('sidebar');
 ---
 
-<div class="page">
+<div class:list={['page', { hasSidebar }]}>
   <header class="header"><slot name="header" /></header>
-  <nav class="sidebar" aria-label="Main">
-    <MobileMenuToggle />
-    <div id="starbook__sidebar" class="sidebar-pane">
-      <div class="sidebar-content">
-        <slot name="sidebar" />
-      </div>
-    </div>
-  </nav>
+  {
+    hasSidebar && (
+      <nav class="sidebar" aria-label="Main">
+        <MobileMenuToggle />
+        <div id="starbook__sidebar" class="sidebar-pane">
+          <div class="sidebar-content">
+            <slot name="sidebar" />
+          </div>
+        </div>
+      </nav>
+    )
+  }
   <div class="main-frame"><slot /></div>
 </div>
 
@@ -31,10 +37,14 @@ import MobileMenuToggle from '../components/MobileMenuToggle.astro';
     height: var(--sb-nav-height);
     border-bottom: 1px solid var(--sb-color-hairline-shade);
     padding: var(--sb-nav-pad-y) var(--sb-nav-pad-x);
+    padding-inline-end: var(--sb-nav-pad-x);
+    background-color: var(--sb-color-bg-nav);
+  }
+
+  .hasSidebar .header {
     padding-inline-end: calc(
       var(--sb-nav-pad-x) * 2 + var(--sb-menu-button-size)
     );
-    background-color: var(--sb-color-bg-nav);
   }
 
   .sidebar-pane {
@@ -61,7 +71,7 @@ import MobileMenuToggle from '../components/MobileMenuToggle.astro';
   }
 
   @media (min-width: 50rem) {
-    .header {
+    .hasSidebar .header {
       padding-inline-end: var(--sb-nav-pad-x);
     }
     .sidebar-pane {
@@ -71,18 +81,8 @@ import MobileMenuToggle from '../components/MobileMenuToggle.astro';
       border-inline-end: 1px solid var(--sb-color-hairline-shade);
     }
 
-    .main-frame {
+    .hasSidebar .main-frame {
       padding-inline-start: var(--sb-sidebar-width);
-    }
-  }
-
-  @media (min-width: 72rem) {
-    .main-pane {
-      order: 1;
-      width: calc(
-        var(--sb-content-width) +
-          (100% - var(--sb-content-width) - var(--sb-sidebar-width)) / 2
-      );
     }
   }
 </style>
