--- a/packages/starbook/components/Sidebar.astro
+++ b/packages/starbook/components/Sidebar.astro
@@ -10,9 +10,9 @@ interface Props {
 }
 ---
 
-<div class="sidebar">
+<div class="sidebar flex">
   <SidebarSublist sublist={Astro.props.sidebar} />
-  <div class="mobile-preferences md:hidden">
+  <div class="mobile-preferences flex md:hidden">
     <ThemeSelect />
     <LanguageSelect locale={Astro.props.locale} />
   </div>
@@ -22,13 +22,11 @@ interface Props {
   .sidebar {
     height: 100%;
     padding: 1rem;
-    display: flex;
     flex-direction: column;
     gap: 1rem;
   }
 
   .mobile-preferences {
-    display: flex;
     justify-content: space-between;
     border-top: 1px solid var(--sb-color-gray-6);
     padding: 0.5rem 0;
