Hide cancel button on wider screens

--- a/packages/starbook/components/Search.astro
+++ b/packages/starbook/components/Search.astro
@@ -175,6 +175,10 @@ import Icon from './Icon.astro';
       min-height: 15rem;
       max-height: calc(100% - 8rem);
     }
+
+    button[data-close-modal] {
+      display: none;
+    }
   }
 </style>
 
