Use accent colour for cancel button

--- a/packages/starbook/components/Search.astro
+++ b/packages/starbook/components/Search.astro
@@ -155,6 +155,7 @@ import Icon from './Icon.astro';
     border: 0;
     background: transparent;
     cursor: pointer;
+    color: var(--sb-color-text-accent);
   }
 
   #starbook__search {
