Add search button hover styling

--- a/packages/starbook/components/Search.astro
+++ b/packages/starbook/components/Search.astro
@@ -114,6 +114,10 @@ import Icon from './Icon.astro';
       width: 100%;
       max-width: 22rem;
     }
+    button[data-open-modal]:hover {
+      border-color: var(--sb-color-gray-2);
+      color: var(--sb-color-white);
+    }
 
     button[data-open-modal] > :last-child {
       margin-inline-start: auto;
