--- a/packages/starbook/components/Sidebar.astro
+++ b/packages/starbook/components/Sidebar.astro
@@ -21,7 +21,7 @@ interface Props {
 <style>
   .sidebar {
     height: 100%;
-    padding: 1rem;
+    padding: 1rem var(--sb-sidebar-pad-x);
     flex-direction: column;
     gap: 1rem;
   }
