Lighter backdrop shade in light theme

--- a/packages/starbook/components/Search.astro
+++ b/packages/starbook/components/Search.astro
@@ -132,7 +132,7 @@ import Icon from './Icon.astro';
   }
 
   dialog::backdrop {
-    background-color: rgba(23, 25, 30, 0.66);
+    background-color: var(--sb-color-backdrop-overlay);
     -webkit-backdrop-filter: blur(0.25rem);
     backdrop-filter: blur(0.25rem);
   }
