Fix dialog frame not spanning full modal

--- a/packages/starbook/components/Search.astro
+++ b/packages/starbook/components/Search.astro
@@ -130,6 +130,9 @@ import Icon from './Icon.astro';
     max-height: 100%;
     box-shadow: var(--sb-shadow-lg);
   }
+  dialog[open] {
+    display: grid;
+  }
 
   dialog::backdrop {
     background-color: var(--sb-color-backdrop-overlay);
