--- a/packages/starbook/components/FallbackContentNotice.astro
+++ b/packages/starbook/components/FallbackContentNotice.astro
@@ -4,24 +4,24 @@ import Icon from './Icon.astro';
 
 <p>
   <Icon
-    name={'information'}
-    size="1.5rem"
-    color="var(--sb-color-text-accent)"
+    name={'warning'}
+    size="1.5em"
+    color="var(--sb-color-orange-high)"
   /><span>This content is not available in your language yet.</span>
 </p>
 
 <style>
   p {
-    border: 1px solid var(--sb-color-gray-5);
-    padding: 0.5rem 1rem;
-    background-color: var(--sb-color-gray-6);
-    color: var(--sb-color-white);
-  }
-  p > * {
-    vertical-align: middle;
-    margin-inline-end: 0.5rem;
-  }
-  p > :last-child {
-    margin-inline-end: 0;
+    border: 1px solid var(--sb-color-orange);
+    padding: 0.75em 1em;
+    background-color: var(--sb-color-orange-low);
+    color: var(--sb-color-orange-high);
+    width: max-content;
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 0.75em;
+    font-size: var(--sb-text-body-sm);
+    line-height: var(--sb-line-height-headings);
   }
 </style>
