Enable fallback content for missing translations (#27)

--- a/packages/starbook/index.astro
+++ b/packages/starbook/index.astro
@@ -1,15 +1,9 @@
 ---
-import type { GetStaticPathsResult, InferGetStaticPropsType } from 'astro';
-import { getCollection } from 'astro:content';
+import type { InferGetStaticPropsType } from 'astro';
 import config from 'virtual:starbook/user-config';
 
 import { getPrevNextLinks, getSidebar } from './utils/navigation';
-import {
-  slugToDir,
-  slugToLang,
-  slugToLocale,
-  slugToParam,
-} from './utils/slugs';
+import { paths } from './utils/routing';
 
 // Built-in CSS styles.
 import './style/props.css';
@@ -20,6 +14,7 @@ import './style/util.css';
 // Components — can override built-in CSS, but not user CSS.
 import ContentPanel from './components/ContentPanel.astro';
 import EditLink from './components/EditLink.astro';
+import FallbackContentNotice from './components/FallbackContentNotice.astro';
 import HeadSEO from './components/HeadSEO.astro';
 import Header from './components/Header.astro';
 import LastUpdated from './components/LastUpdated.astro';
@@ -40,21 +35,13 @@ import './style/asides.css';
 import 'virtual:starbook/user-css';
 
 export async function getStaticPaths() {
-  const docs = await getCollection('docs');
-
-  return docs.map((doc) => ({
-    params: { slug: slugToParam(doc.slug) },
-    props: doc,
-  })) satisfies GetStaticPathsResult;
+  return paths;
 }
 
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
-const { render, data, slug, id } = Astro.props;
-const { Content, headings } = await render();
-const lang = slugToLang(slug);
-const locale = slugToLocale(slug);
-const dir = slugToDir(slug);
+const { dir, entry, entryMeta, isFallback, lang, locale } = Astro.props;
+const { Content, headings } = await entry.render();
 const sidebar = getSidebar(Astro.url.pathname, locale);
 const prevNextLinks = getPrevNextLinks(sidebar);
 ---
@@ -63,7 +50,7 @@ const prevNextLinks = getPrevNextLinks(sidebar);
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <HeadSEO data={data} lang={lang} />
+    <HeadSEO data={entry.data} lang={lang} />
   </head>
   <body>
     <ThemeProvider />
@@ -81,24 +68,30 @@ const prevNextLinks = getPrevNextLinks(sidebar);
               config.editLink.baseUrl && (
                 <>
                   <h2>Contribute</h2>
-                  <EditLink data={data} id={id} />
+                  <EditLink data={entry.data} id={entry.id} />
                 </>
               )
             }
           </RightSidebarPanel>
         </Fragment>
-        <main id="starbook__overview" data-pagefind-body>
+        <main
+          id="starbook__overview"
+          data-pagefind-body
+          lang={entryMeta.lang}
+          dir={entryMeta.dir}
+        >
           <ContentPanel>
             <h1
               style="font-size: var(--sb-text-h1); line-height: var(--sb-line-height-headings); font-weight: 600; color: var(--sb-color-white); margin-top: 1rem;"
             >
-              {data.title}
+              {entry.data.title}
             </h1>
+            {isFallback && <FallbackContentNotice />}
           </ContentPanel>
           <ContentPanel>
             <MarkdownContent><Content /></MarkdownContent>
             <footer>
-              <LastUpdated id={id} lang={lang} />
+              <LastUpdated id={entry.id} lang={lang} />
               <PrevNextLinks {...prevNextLinks} dir={dir} />
             </footer>
           </ContentPanel>
